@@ -8,7 +8,7 @@
     <title></title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="common/phetcommon/css/phetcommon.css"/>
+    <link rel="stylesheet" href="../phetcommon/css/phetcommon.css"/>
     <link rel="stylesheet" href="css/example-sim.css"/>
 
     <!-- jquery must be loaded here -->
