@@ -10,7 +10,7 @@
   <title></title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="common/phetcommon/css/phetcommon.css"/>
+  <link rel="stylesheet" href="../phetcommon/css/phetcommon.css"/>
   <link rel="stylesheet" href="contrib/bootstrap-2.2.1/css/bootstrap.css"/>
   <link rel="stylesheet" href="contrib/font-awesome/css/font-awesome.css"/>
   <link rel="stylesheet" href="css/example-sim.css"/>
