@@ -1,5 +1,5 @@
 Put sim-specific JavaScript files under this directory.
 Use subdirectories to organize your code, for example model/ and view/.
 
-NOTE: This repository expects its dependent repositories (phetcommon, easel-phet) to
-be checked out as siblings in the directory hierarchy.
+NOTE: This repository expects its dependent repositories to be checked out as siblings
+in the directory hierarchy. See js/config.js for dependencies.
