@@ -20,6 +20,8 @@ require.config(
       // common directories, uppercase names to identify them in require imports
       PHETCOMMON: "../../phetcommon/js",
       'EASEL-PHET': "../../easel-phet/js",
+      DOT: "../../dot/js",
+      ASSERT: "../../assert/js",
 
       // contrib dependencies required by common directories
       stats: "../../phetcommon/contrib/stats-r11",
